[build-system]
requires = ["setuptools>=74", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "bouillon"
authors = [
    {name= 'Janus Heide', email = "janusheide@gmail.com"}
]
description = "Tool for releasing machine learning model and service projects and other fast paced python projects."
dynamic = ["version"]
readme = "README.rst"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    'Topic :: Scientific/Engineering :: Information Analysis',
    "Topic :: Software Development :: Build Tools",
    'Topic :: Utilities',
]

keywords = ["building", "maintenance", "utility"]

dependencies = [
    "packaging<=24.1,>=22",
    "tomli<3,>=2; python_version < \"3.11\"",
]

[project.optional-dependencies]
test = [
    "brundle[linters]==0.3.0",
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
]
standard = [
    "bouillon[test]",
    "build==1.2.2",
    "twine==5.1.1",
]
dev = [
    "bouillon[standard]",
    "uppd==0.3.0",
]

[project.urls]
Homepage = "https://github.com/janusheide/bouillon"
Repository = "https://github.com/janusheide/bouillon"
Changelog = "https://github.com/janusheide/bouillon/blob/main/NEWS.rst"

[project.scripts]
bouillon = "bouillon.cli:main_cli"

[tool.coverage.report]
show_missing = true

[tool.isort]
multi_line_output = 5
include_trailing_comma = "True"

[tool.licensecheck]
using = "PEP631:test;dev"

[tool.mypy]
exclude="build"

[[tool.mypy.overrides]]
module = "bouillon"
warn_return_any = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"
addopts = "--cov=bouillon --cov-report term-missing --cov-fail-under=90"

[tool.setuptools_scm]
