[build-system]
requires = ["setuptools>=74", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "bouillon"
authors = [
    {name= 'Janus Heide', email = "janusheide@gmail.com"}
]
description = "Tool for releasing machine learning model and service projects and other fast paced python projects."
dynamic = ["version"]
readme = "README.rst"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]

keywords = ["building", "maintenance", "utility"]

dependencies = [
    "packaging<=24.1,>=22",
    "tomli<3,>=2; python_version < \"3.11\"",
]

[project.optional-dependencies]
test = [
    "brundle==1.2.0",
    "dlister==0.1.0",
    "isort==5.13.2",
    "mypy==1.13.0",
    "ruff==0.7.1",
    "pytest==8.3.3",
    "pytest-cov<=6.0.0,>=5.0.0",
]
release = [
    "build==1.2.2.post1",
    "licensecheck==2024.3",
    "twine==5.1.1",
]
standard = [
    "bouillon[test]",
    "bouillon[release]",
]
dev = [
    "bouillon[standard]",
    "uppd==1.3.1",
]

[project.urls]
Homepage = "https://github.com/janusheide/bouillon"
Repository = "https://github.com/janusheide/bouillon"
Changelog = "https://github.com/janusheide/bouillon/blob/main/NEWS.rst"

[project.scripts]
bouillon = "bouillon.cli:main_cli"

[tool.coverage.report]
show_missing = true
fail_under = 87

[tool.isort]
multi_line_output = 5
include_trailing_comma = "True"

[tool.licensecheck]
using = "PEP631:test;dev"

[tool.mypy]
exclude="build"

[[tool.mypy.overrides]]
module = "bouillon"
warn_return_any = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
addopts = "--cov=bouillon"
markers = "cicd: tests that frequently fails if run locally."

[tool.setuptools_scm]

[tool.bouillon]
test_foo = "bar"
check_clean_branch = true
news_files = ["NEWS.rst",]
test_steps  = [["pytest"],]
