[build-system]
requires = ["setuptools>=74", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "bouillon"
authors = [
    {name= 'Janus Heide', email = "janusheide@gmail.com"}
]
description = "Tool for releasing machine learning model and service projects and other fast paced python projects."
dynamic = ["version"]
readme = "README.rst"
keywords = ["building", "maintenance", "utility"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]

requires-python = ">=3.8"

dependencies = [
    "packaging>=22.0",
    "tomli>=2.0.0; python_version < \"3.11\"",
]

[project.optional-dependencies]
test = [
    "brundle==1.3.0",
    "dlister==1.3.0",
    "isort==6.0.0",
    "mypy==1.14.1",
    "ruff==0.9.4",
    "pytest==8.3.4",
    "pytest-cov<=6.0.0,>=5.0.0",
]
release = [
    "build==1.2.2.post1",
    "licensecheck==2024.3",
    "twine==6.1.0",
]
standard = [
    "bouillon[test]",
    "bouillon[release]",
]
dev = [
    "bouillon[standard]",
    "uppd==1.6.0",
]

[project.urls]
Homepage = "https://github.com/janusheide/bouillon"
Repository = "https://github.com/janusheide/bouillon"
Changelog = "https://github.com/janusheide/bouillon/blob/main/NEWS.rst"

[project.scripts]
bouillon = "bouillon.cli:main_cli"

[tool.coverage.report]
show_missing = true
fail_under = 86

[tool.isort]
multi_line_output = 5
include_trailing_comma = "True"

[tool.licensecheck]
using = "PEP631:test;dev"

[tool.mypy]
exclude="build"

[[tool.mypy.overrides]]
module = "bouillon"
warn_return_any = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
addopts = "--cov=bouillon"
markers = "cicd: tests that frequently fails if run locally."
filterwarnings = [
    "error",
    # Windows does not manage to keep the event loop open
    "ignore::pytest.PytestUnraisableExceptionWarning",
    ]

[tool.ruff.lint]
select = ["ALL"]
# as of 01/2024 ruff does not support isort configuration, so we disable I001
ignore = [ "ANN001", "ANN003", "ARG001", "D203", "D213", "D401", "G004", "I001", "INP001", "N806", "S603", "S607", "PLR0913", "PLR2004", "PGH003", "PLW1510", "SIM105"]

[tool.ruff.lint.per-file-ignores]
"test/**/*.py" = ["ANN", "ARG", "ASYNC", "B017", "D", "ERA", "S101", "S105", "S106", "PT011"]


[tool.setuptools_scm]

[tool.bouillon]
test_foo = "bar"
check_clean_branch = true
news_files = ["NEWS.rst",]
test_steps  = [["pytest"],]
